[package]
name = "advent2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent_code_lib = {git = "https://github.com/gjf2a/advent_code_lib"}
enum-iterator = "1.2.0"
anyhow = "1"
bare_metal_modulo = "1"
num-bigint = "0.4"